Fix scrollbar

--- a/src/app/website/style.scss
+++ b/src/app/website/style.scss
@@ -51,7 +51,6 @@ website {
 	}
 
 	pre, code {
-		word-wrap: break-word;
 		word-spacing: 0;
 		font-size: 13px;
 		line-height: 1.4em;
